<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/partner_surface">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_partner_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/partner_space_m"
            app:layout_constraintBottom_toTopOf="@id/btn_save"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PartnerTypography.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_section_biodata"
                    android:textColor="@color/partner_primary" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PartnerTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/partner_space_s"
                    android:hint="@string/profile_label_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PartnerTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/partner_space_m"
                    android:hint="@string/profile_label_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/PartnerTypography.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/partner_space_l"
                    android:text="@string/profile_section_bank"
                    android:textColor="@color/partner_primary" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PartnerTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/partner_space_s"
                    android:hint="@string/profile_label_bank_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PartnerTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/partner_space_m"
                    android:hint="@string/profile_label_bank_account">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_bank_account_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/PartnerTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/partner_space_m"
                    android:hint="@string/profile_label_bank_holder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_bank_account_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/PartnerTypography.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/partner_space_l"
                    android:text="@string/profile_section_preference"
                    android:textColor="@color/partner_primary" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/partner_space_s">

                    <TextView
                        style="@style/PartnerTypography.Body"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_label_email_notif"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/sw_email_notif"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/sw_email_notif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/PartnerButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="@dimen/partner_space_m"
            android:text="@string/profile_btn_save"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
